Correct avatar spacing for assignment repo show

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -417,6 +417,10 @@ hr {
   }
 }
 
+.avatar-large {
+  margin-right: 10px;
+}
+
 .organization-list-item {
   font-size: 16px;
 
@@ -850,10 +854,6 @@ hr {
 
 .flash.flash-error p:first-of-type {
   margin-top: 0;
-}
-
-.assignment-repo-header {
-  margin-left: 7px;
 }
 
 .repo-detail-item {
